--- a/wsgi/static/index.html
+++ b/wsgi/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Efate host</title>
+    <title>fccagou</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Efate</a>
+          <a class="brand" href="/">fccagou</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="dropdown">
@@ -53,6 +53,16 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Devs<b class="caret"></b></a>
                   <ul class="dropdown-menu">
 	              <li><a href="https://github.com" target="github">github</a></li>
+		  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diving<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+	              <li><a href="diving.html">Diving</a></li>
+	              <li><a href="http://subsurface.hohndel.org/"
+                          target="subsurface">Subsurface: opensource divelog program</a></li>
+	              <li><a href="https://fr.divelogs.de/"
+                          target="divelogs">divelogs: online divelogs book</a></li>
 		  </ul>
                 </li>
             </ul>
