--- a/wsgi/static/diving.html
+++ b/wsgi/static/diving.html
@@ -50,7 +50,7 @@
 		  </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Devs<b class="caret"></b></a>
+                  <a href="devs.html" class="dropdown-toggle" data-toggle="dropdown">Devs<b class="caret"></b></a>
                   <ul class="dropdown-menu">
 	              <li><a href="https://github.com" target="github">github</a></li>
 		  </ul>
