--- a/wsgi/static/index.html
+++ b/wsgi/static/index.html
@@ -52,6 +52,7 @@
                 <li class="dropdown">
                   <a href="devs.html" class="dropdown-toggle" data-toggle="dropdown">Devs<b class="caret"></b></a>
                   <ul class="dropdown-menu">
+	              <li><a href="devs.html">devs</a></li>
 	              <li><a href="https://github.com" target="github">github</a></li>
 		  </ul>
                 </li>
