web: add arduino page

--- a/wsgi/static/arduino.html
+++ b/wsgi/static/arduino.html
@@ -69,12 +69,11 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Arduino<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                      <li><a href="arduino.html">My sketchs</a></li>
-                      <li><a href="http://www.arduino.cc/"
+	              <li><a href="arduino.html">My sketchs</a></li>
+	              <li><a href="http://www.arduino.cc/"
                           target="arduino">Arduino web site</a></li>
-                  </ul>
+		  </ul>
                 </li>
-
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -83,11 +82,19 @@
 
     <div class="container">
 
-      <h3>ERROR</h3>
-      <p></p>
-      <pre>
-ERROR_TAG
-      </pre>
+      <h3>Des trucs sur arduino</h3>
+      <p>Les codes sources des sketch sont disponibles sur <a
+          href="https://github.com/fccagou/arduino">github.com</a>
+      </p>
+      <h4>webClient </h4>
+      <p>Un premier projet qui a pour but de piloter un arduino Ethernet depuis
+      un site web.</p>
+      <p>Il existe déjà des solutions comme <a
+          href="https://www.teleduino.org/">Teleduino</a> mais ce projet est
+      didactique pour la découverte du web et de l'electronique en famille</p>
+      <p><a
+          href="https://github.com/fccagou/arduino/tree/master/webClient"
+          target="github">Code source</a>
     </div> <!-- /container -->
 
     <!-- Le javascript
@@ -98,5 +105,3 @@ ERROR_TAG
 
   </body>
 </html>
-
-
