--- a/wsgi/static/index.html
+++ b/wsgi/static/index.html
@@ -66,6 +66,15 @@
                           target="divelogs">divelogs: online divelogs book</a></li>
 		  </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Arduino<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                      <li><a href="arduino.html">My sketchs</a></li>
+                      <li><a href="http://www.arduino.cc/"
+                          target="arduino">Arduino web site</a></li>
+                  </ul>
+                </li>
+
             </ul>
           </div><!--/.nav-collapse -->
         </div>
