--- a/wsgi/static/index.html
+++ b/wsgi/static/index.html
@@ -85,7 +85,7 @@
 
       <h3>Un petit site comme ça au passage ...</h3>
       <p></p>
-      <img src="polynesie-makatea-300.jpg" />
+      <img src="media/polynesie-makatea-300.jpg" />
     </div> <!-- /container -->
 
     <!-- Le javascript
