move: rename media to img

--- a/wsgi/static/arduino.html
+++ b/wsgi/static/arduino.html
@@ -113,7 +113,7 @@
     <script>
 
 
-    var led_state=["media/led_white.png", "media/led_red.png"];
+    var led_state=["img/led_white.png", "img/led_red.png"];
     var led_msg=["off", "on"];
 
     function arget (key) {
