--- a/wsgi/static/devs.html
+++ b/wsgi/static/devs.html
@@ -163,8 +163,8 @@ render_unsafe_content = false
 color_scale = True
 downloadable_paths = /trunk, /branches/*, /tags/*
 hide_properties = svk:merge
-intermediate_color = 
-intermediate_point = 
+interimgte_color = 
+interimgte_point = 
 newest_color = (255, 136, 136)
 oldest_color = (136, 136, 255)
 oneliner_properties = trac:summary
