--- a/wsgi/static/error.html
+++ b/wsgi/static/error.html
@@ -74,6 +74,15 @@
                           target="arduino">Arduino web site</a></li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle"
+                      data-toggle="dropdown">AR.Drone<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+	              <li><a href="ardrone.html">AR.Drone</a></li>
+	              <li><a href="http://ardrone2.parrot.com/"
+                          target="ar.drone 2.0">ar.drone 2.0 Web Site</a></li>
+		  </ul>
+                </li>
 
             </ul>
           </div><!--/.nav-collapse -->
