add: iscagoualive function

--- a/wsgi/static/index.html
+++ b/wsgi/static/index.html
@@ -106,8 +106,10 @@
     <script src="js/dns.js"></script>
 
     <script>
-		ip=dns_gethostbyname('lenidducagou')
-		document.getElementById('lenidducagou').href='http://'+ip+'/'
+		ip=isCagouAlive();
+		if (ip !="" ) {
+		   document.getElementById('lenidducagou').href='http://'+ip+'/';
+                }
     </script>
  
 
